--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h4>Os melhores produtos para sua empresa crescer!</h4>
     </div>
     <div class="button-contacto">
-        <a href="https://www.w3schools.com/" target="_blank">Entre em contacto já!</a>
+        <a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre os seus produtos" target="_blank">Entre em contacto já!</a>
     </div>
     <div class="title-content">
         <h4>Confira nossos produtos</h4>
@@ -106,7 +106,7 @@
             para sua empresa lucrar ainda<br>
             mais e crescer como nunca viu!
         </h3>
-        
+
     </div>
     <div class="stars">
         <img src="./images/stars.png" alt="stars">
