--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
     <div class="title-content">
         <h4>Confira nossos produtos</h4>
     </div>
-
     <div>
-        <details open>
+        <details>
             <summary>
                 Carnes
             </summary>
