improving some changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./Styles/buttons.css">
     <link rel="stylesheet" href="./Styles/content.css">
     <link rel="stylesheet" href="./Styles/accordion-menu.css">
+    <link rel="stylesheet" href="./Styles/backanimation.css">
 <!--Styles-->
 <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
@@ -16,6 +17,18 @@
     <title>Doro Foods - Contacto para cotação</title>
 </head>
 <body>
+
+
+    <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div>
+    <div class="content">
+     
+    
+
+
+
+
 
     <div class="logo">
         <img src="./images/Logo.png" alt="doro foods logo" width="200">
@@ -26,6 +39,7 @@
     <div class="button-contacto">
         <a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre os seus produtos" target="_blank">Entre em contacto já!</a>
     </div>
+
     <div class="title-content">
         <h4>Confira nossos produtos</h4>
     </div>
@@ -99,19 +113,27 @@
         </details>
     </div>
 
-    <div class="footer-text">
-        <h3>Venha ser nosso parceiro<br>
-            Temos os melhores preços<br>
-            para sua empresa lucrar ainda<br>
-            mais e crescer como nunca viu!
-        </h3>
+    <div style="background-color: white; padding-bottom: 20px;">
+        <div class="footer-text">
+            <h5>Venha ser nosso parceiro<br>
+                Temos os melhores preços<br>
+                para sua empresa crescer e lucrar<br>
+                muito mais
+            </h5>
 
+        </div>
+        <div class="logo" style="margin-top: -30px;">
+            <img src="./images/Logo.png" alt="doro foods logo" width="90">
+        </div>
+        <div class="stars">
+            <img src="./images/stars.png" alt="stars">
+        </div>
+        <div class="link">
+            <a href="https://www.dorofoods.pt" target="_blank">www.dorofoods.pt</a>
+        </div>
     </div>
-    <div class="stars">
-        <img src="./images/stars.png" alt="stars">
-    </div>
-    <div class="link">
-        <a href="https://www.dorofoods.pt" target="_blank">www.dorofoods.pt</a>
-    </div>
+
+
+</div>
 </body>
 </html>
