--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+     <!-- JS Modal -->
+<script defer src="./script.js"></script>
+
+      <!-- JS Modal -->
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,7 +16,10 @@
     <link rel="stylesheet" href="./Styles/content.css">
     <link rel="stylesheet" href="./Styles/accordion-menu.css">
     <link rel="stylesheet" href="./Styles/backanimation.css">
+    <link rel="stylesheet" href="./Styles/modal.css">
+
 <!--Styles-->
+
 <!--Fonts-->
     <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 <!--Fonts-->
@@ -23,117 +32,116 @@
     <div class="bg bg2"></div>
     <div class="bg bg3"></div>
     <div class="content">
-     
-    
 
-
-
-
-
-    <div class="logo">
-        <img src="./images/Logo.png" alt="doro foods logo" width="200">
-    </div>
-    <div class="title-logo">
-        <h4>Os melhores produtos para sua empresa crescer!</h4>
-    </div>
-    <div class="button-contacto">
-        <a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre os seus produtos" target="_blank">Entre em contacto já!</a>
-    </div>
-
-    <div class="title-content">
-        <h4>Confira nossos produtos</h4>
-    </div>
-    <div>
-        <details>
-            <summary>
-                Carnes
-            </summary>
-            <div>
-                <img src="./images/picanha.jpeg" alt="picanha">
-                <p><strong>Picanha Premium Drumlin</strong> <br>Picanha de qualidade premium com sabor marcante. Ideal quando assado por inteiro</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Picanha Selo Premium"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/beef1.png" alt="beef">
-                <p><strong>Beef Rib eye 2-3.5kg - fairfax</strong> <br>Beef Rib eye de qualidade premium, pesando de 2 a 3,5 kg</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Beef Rib eye"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/vazia.png" alt="vazia">
-                <p><strong>Vazia Marmoreado Wolowina</strong> <br>Vazia polonesa de qualidade, com selo premium</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Vazia Marmoreado"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/beef2.png" alt="striploin">
-                <p><strong>Beef Striploin chain on Half</strong> <br>Carne selecionada tipo Striploin de qualidade premium</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Beef Striploin"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/rump.png" alt="alcatra">
-                <p><strong>Rumpheart Fat on</strong> <br>Carne selecionada tipo alcatra. Atinge todo o potencial quando assado inteiro</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre alcatra Rumpheart"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/beef3.png" alt="marbled">
-                <p><strong>Beef Rib eye Marbled</strong> <br>Beef Rib eye premium Marbled, pesando 3,5kg congelado</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Beef Rib eye Marbled"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/tomahawk.png" alt="tomahawk">
-                <p><strong>Beef Tomahawk Portioned</strong> <br>Beef Tomahawk selo premium, congelado</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Beef Tomahawk"  target="_blank">Obter Cotação</a>
-            </div>
-        </details>
-        <details>
-            <summary>
-                Congelados
-            </summary>
-            <div>
-                <img src="./images/mexilhao.jpeg" alt="maxilhao">
-                <p><strong>Mexilhão Meia concha</strong> <br>Mexilhão meia concha da Nova Zelândia</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Mexilhão meia concha" target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/lagosta.jpeg" alt="lagosta1">
-                <p><strong>Lagosta Moçambique</strong> <br>Lagosta tamanho grande de Moçambique, ideal para preparação de pratos finos</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Lagosta Moçambique"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/lagostavermelh.jpeg" alt="lagosta2">
-                <p><strong>Lagosta vermelha Moçambique</strong> <br>Lagosta tamanho grande de Moçambique, selo premium</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Lagosta Moçambique"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/camarao.jpeg" alt="camarao">
-                <p><strong>Camarão Jumbo</strong> <br>Camarão tipo jumbo com sabor marcante, ideal para pratos frescos</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Camarão Jumbo"  target="_blank">Obter Cotação</a>
-            </div>
-        </details>
-        <details>
-            <summary>
-                Óleos
-            </summary>
-            <div>
-                <img src="./images/boamesa.png" alt="oleo">
-                <p><strong>Óleo 100% Vegetal Boa Mesa</strong> <br>Óleo de Soja, Óleo de girassol e Óleo de alto rendimento. Fornecemos em caixas de embalagem PET.</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Óleo Boa mesa"  target="_blank">Obter Cotação</a>
-            </div>
-            <div style="margin-top:5px;">
-                <img src="./images/olivadoro.png" alt="azeite">
-                <p><strong>Azeite Seleção Oliva d'oro</strong> <br> Azeite de categoria superior obtido diretamente de azeitonas selecionadas.</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Óleo Azeite Oliva d'oro" target="_blank">Obter Cotação</a>
-            </div>
-        </details>
-    </div>
-
-    <div style="background-color: white; padding-bottom: 20px;">
-        <div class="footer-text">
-            <h5>Venha ser nosso parceiro<br>
-                Temos os melhores preços<br>
-                para sua empresa crescer e lucrar<br>
-                muito mais
-            </h5>
-
+        <div class="logo">
+            <img src="./images/Logo.png" alt="doro foods logo" width="200">
         </div>
-        <div class="logo" style="margin-top: -30px;">
-            <img src="./images/Logo.png" alt="doro foods logo" width="90">
+        <div class="title-logo">
+            <h4>Os melhores produtos para sua empresa crescer!</h4>
         </div>
-        <div class="stars">
-            <img src="./images/stars.png" alt="stars">
+        <div class="button-contacto">
+            <a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre os seus produtos" target="_blank">Entre em contacto já!</a>
         </div>
-        <div class="link">
-            <a href="https://www.dorofoods.pt" target="_blank">www.dorofoods.pt</a>
+
+        <div class="title-content">
+            <h4>Confira nossos produtos</h4>
         </div>
-    </div>
+        <div>
+
+            <details>
+                <summary>
+                    Carnes
+                </summary>
+
+                <div>
+                    <img src="./images/picanha.jpeg" alt="picanha">
+
+                    <p><strong>Picanha Premium Drumlin</strong> <br>Picanha de qualidade premium com sabor marcante. Ideal quando assado por inteiro</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Picanha Selo Premium"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/beef1.png" alt="beef">
+                    <p><strong>Beef Rib eye 2-3.5kg - fairfax</strong> <br>Beef Rib eye de qualidade premium, pesando de 2 a 3,5 kg</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Beef Rib eye"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/vazia.png" alt="vazia">
+                    <p><strong>Vazia Marmoreado Wolowina</strong> <br>Vazia polonesa de qualidade, com selo premium</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Vazia Marmoreado"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/beef2.png" alt="striploin">
+                    <p><strong>Beef Striploin chain on Half</strong> <br>Carne selecionada tipo Striploin de qualidade premium</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Beef Striploin"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/rump.png" alt="alcatra">
+                    <p><strong>Rumpheart Fat on</strong> <br>Carne selecionada tipo alcatra. Atinge todo o potencial quando assado inteiro</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre alcatra Rumpheart"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/beef3.png" alt="marbled">
+                    <p><strong>Beef Rib eye Marbled</strong> <br>Beef Rib eye premium Marbled, pesando 3,5kg congelado</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Beef Rib eye Marbled"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/tomahawk.png" alt="tomahawk">
+                    <p><strong>Beef Tomahawk Portioned</strong> <br>Beef Tomahawk selo premium, congelado</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Beef Tomahawk"  target="_blank">Obter Cotação</a>
+                </div>
+
+            </details>
+            <details>
+                <summary>
+                    Congelados
+                </summary>
+                <div>
+                    <img src="./images/mexilhao.jpeg" alt="maxilhao">
+                    <p><strong>Mexilhão Meia concha</strong> <br>Mexilhão meia concha da Nova Zelândia</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Mexilhão meia concha" target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/lagosta.jpeg" alt="lagosta1">
+                    <p><strong>Lagosta Moçambique</strong> <br>Lagosta tamanho grande de Moçambique, ideal para preparação de pratos finos</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Lagosta Moçambique"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/lagostavermelh.jpeg" alt="lagosta2">
+                    <p><strong>Lagosta vermelha Moçambique</strong> <br>Lagosta tamanho grande de Moçambique, selo premium</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Lagosta Moçambique"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/camarao.jpeg" alt="camarao">
+                    <p><strong>Camarão Jumbo</strong> <br>Camarão tipo jumbo com sabor marcante, ideal para pratos frescos</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Camarão Jumbo"  target="_blank">Obter Cotação</a>
+                </div>
+            </details>
+            <details>
+                <summary>
+                    Óleos
+                </summary>
+                <div>
+                    <img src="./images/boamesa.png" alt="oleo">
+                    <p><strong>Óleo 100% Vegetal Boa Mesa</strong> <br>Óleo de Soja, Óleo de girassol e Óleo de alto rendimento. Fornecemos em caixas de embalagem PET.</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Óleo Boa mesa"  target="_blank">Obter Cotação</a>
+                </div>
+                <div style="margin-top:5px;">
+                    <img src="./images/olivadoro.png" alt="azeite">
+                    <p><strong>Azeite Seleção Oliva d'oro</strong> <br> Azeite de categoria superior obtido diretamente de azeitonas selecionadas.</p><a href="https://api.whatsapp.com/send?phone=351919301850&text=Olá, gostaria de obter mais informações sobre Óleo Azeite Oliva d'oro" target="_blank">Obter Cotação</a>
+                </div>
+            </details>
+        </div>
+
+        <div style="background-color: white; padding-bottom: 20px;">
+            <div class="footer-text">
+                <h5>Venha ser nosso parceiro<br>
+                    Temos os melhores preços<br>
+                    para sua empresa crescer e lucrar<br>
+                    muito mais
+                </h5>
+
+            </div>
+            <div class="logo" style="margin-top: -30px;">
+                <img src="./images/Logo.png" alt="doro foods logo" width="90">
+            </div>
+            <div class="stars">
+                <img src="./images/stars.png" alt="stars">
+            </div>
+            <div class="link">
+                <a href="https://www.dorofoods.pt" target="_blank">www.dorofoods.pt</a>
+            </div>
+        </div>
 
 
 </div>
+
 </body>
 </html>
